--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -19,20 +19,20 @@
             <a class="main-tittle" href="./index.html">Web<span class="rest-tittle">Studio</span></a>
         </h4>
         <nav>
-            <ul class="menu">
+            <ul class="menu-list">
                 <li><a class="studio" href="./studio">Studio</a></li>
-                <li><a class="portfolio" href="./Portfolio">Portfolio</a></li>
-                <li><a class="contacts" href="./Contacts">Contacts</a></li>
+                <li><a class="portfolio" href="./portfolio">Portfolio</a></li>
+                <li><a class="contacts" href="./contacts">Contacts</a></li>
             </ul>
         </nav>
-            <ul class="contact-menu">
+            <ul class="contact-list">
                 <li><a class="email" href="mailto:info@dexstudio@info.com">info@dexstudio.gmail.com</a></li>
-                <li><a class="phone" href="tel:+48111111111">+48111111111</a></li>
+                <li><a class="phone" href="tel:+48111111111">+48 111 111 111</a></li>
             </ul>
     </header>
 
     <main>
-        <section class="container">
+        <section class="second-menu container">
             <nav>
                 <ul class="button-list">
                     <li><button class="menu-button" type="button">Wszystkie</button></li>
@@ -44,8 +44,8 @@
             </nav>
         </section>
 
-        <section>
-            <ul class="photo-list"> 
+        <section class="portfolio-photo container section">
+            <ul class="portfolio-list">
                 <li>
                     <figure>
                         <img src="./images/img7.jpg" alt="Otwarty laptop" width="370" height="294">
@@ -105,7 +105,7 @@
     </main>
 
     <footer class="footer">
-        <section>
+        <section class="footer-section">
             <h4>
                 <a class="second-main-tittle" href="./index.html">Web<span class="second-rest-tittle">Studio</span></a>
             </h4>
