--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="menu">
             <ul class="menu-list">
                 <li><a class="studio" href="./studio">Studio</a></li>
-                <li><a class="portfolio" href="./portfolio.html">Portofolio</a></li>
+                <li><a class="portfolio" href="./portfolio.html">Portfolio</a></li>
                 <li><a class="contacts" href="./contacts">Contacts</a></li>
             </ul>
         </nav>
